--- a/src/style.css
+++ b/src/style.css
@@ -574,7 +574,7 @@ button:focus {
 .tech-icons:hover {
   transform: scale(1.05) !important;
   overflow: hidden !important;
-  border: 2.2px solid rgba(197, 115, 230, 0.883) !important;
+  border: 2.2px solid rgb(50, 205, 50) !important;
 }
 .tech-icon-images {
   padding: 20px !important;
